--- a/public/partials/navs/bottom_qa.html
+++ b/public/partials/navs/bottom_qa.html
@@ -13,7 +13,7 @@
             </li>
             <li ng-click="changeTab('trending')"
                 ng-show="tab == 'home'">
-                <a href="#/trendingFull">
+                <a href="#/trendingFull/">
                     <i class="fa fa-line-chart"></i> Trending
                 </a>
             </li>
@@ -48,7 +48,7 @@
                 </li>
                 <li ng-click="changeTab('trending')"
                     ng-show="tab == 'home'">
-                    <a href="#/trendingFull">
+                    <a href="#/trendingFull/">
                         <i class="fa fa-line-chart"></i> Trending
                     </a>
                 </li>
