--- a/public/partials/questionFeed.html
+++ b/public/partials/questionFeed.html
@@ -17,13 +17,22 @@
         </span>
     </h5>
 
+    <div>
+        <alert ng-if="alerts.newQuestionAlert.display == true"
+               ng-model="alerts.newQuestionAlert"
+               type="{{alerts.newQuestionAlert.type}}"
+               ng-click="closeAlert('newQuestionAlert')">
+            {{alerts.newQuestionAlert.num}} new post(s) available. Click to show
+        </alert>
+    </div>
+
     <ul class="list-unstyled">
         <li class="list-unstyled clearfix question-feed-li"
             ng-repeat="eachQuestion in questions"
             ng-class="questionReference[eachQuestion.questionIndex].questionClass">
 
             <h4 class="text-outputs">
-                <a ng-href="#/fullQuestion/{{eachQuestion.questionIndex}}">
+                <a ng-href="#/fullQuestion/{{eachQuestion.questionIndex}}/">
                     {{eachQuestion.heading}}
                 </a>
                 <small class="by">by</small>
@@ -55,7 +64,7 @@
                     <span class='glyphicon glyphicon-thumbs-up' aria-hidden='true'></span>
 
                 </button>
-                <a ng-href="#/fullQuestion/{{eachQuestion.questionIndex}}"
+                <a ng-href="#/fullQuestion/{{eachQuestion.questionIndex}}/"
                    type="button"
                    class="btn btn-default btn-xs pull-right conv">
                     <i class="fa fa-comments-o"></i>
