--- a/public/partials/trending_summary.html
+++ b/public/partials/trending_summary.html
@@ -3,7 +3,7 @@
      ng-class="columnClass">
     <h5 id="trending"
         ng-click="changeTab('trending')">
-        <a href="#/trendingFull/">
+        <a href="#/trending/full/">
             <i class="fa fa-line-chart"></i> Trending
         </a>
     </h5>
