--- a/public/partials/online.html
+++ b/public/partials/online.html
@@ -2,7 +2,7 @@
      ng-class="columnClass"
      class="animated fadeIn"
      style="text-align: center">
-    <h5>Users</h5>
+    <h5 class="text-primary">Users</h5>
     <table class="table table-condensed ng-cloak" id="onlineUsers">
         <tr ng-repeat="(key, value) in onlineUsers">
             <td class='onlineUser userName'>
