--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -28,9 +28,10 @@
     </script>
 
     <!-- loads bootstrap css -->
-    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.1/css/bootstrap.min.css">
+    <!--<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.1/css/bootstrap.min.css">-->
+    <link rel="stylesheet" href="/public/css/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet"
-          href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.1/css/bootstrap-theme.min.css">
+          href="/public/css/bootstrap/css/bootstrap-theme.min.css">
 
     <!--animate.css-->
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/animate.css/3.2.0/animate.min.css"/>
@@ -117,7 +118,7 @@
 
 <!-- Bootstrap.js -->
 <script type="text/javascript"
-        src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.1/js/bootstrap.min.js"></script>
+        src="/public/css/bootstrap/js/bootstrap.min.js"></script>
 
 <!-- loads respond.js: enables responsive web designs in browsers that don't support CSS3 Media Queries - in particular, Internet Explorer 8 and under. -->
 <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script>
