--- a/public/partials/question_full.html
+++ b/public/partials/question_full.html
@@ -1,6 +1,12 @@
 <div ng-controller="qFullCtrl"
      ng-class="columnClass"
      class="ng-cloak animated fadeIn">
+    <a type="button"
+       class="btn btn-default btn-lg navbar-btn hidden-xs"
+       ng-click="changeTab('home'); back()">
+        <i class="fa fa-chevron-left"></i> Back
+    </a>
+
     <div ng-if="alerts.newQuestionAlert.display == true"
          class="animated fadeIn">
         <a ng-href="#/1"
