--- a/public/css/chat.css
+++ b/public/css/chat.css
@@ -39,7 +39,7 @@ ul > li.col-xs-3 > a {
 
 #feed-search-form {
     margin-top: 10px;
-    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 .form-error-notice {
