Removed logout from session, user can now use the same username theoghout

--- a/public/partials/navs/top_qa.html
+++ b/public/partials/navs/top_qa.html
@@ -36,18 +36,18 @@
                     {{customUsername}} <b class="caret"></b>
                 </a>
                 <ul class="dropdown-menu">
-                    <li>
-                        <a href="#"
-                           target="_self"
-                           class="logoutCustomChat"
-                           ng-click="logoutCustomChat()">Logout from Session
-                        </a>
-                    </li>
+                    <!--<li>-->
+                    <!--<a href="#"-->
+                    <!--target="_self"-->
+                    <!--class="logoutCustomChat"-->
+                    <!--ng-click="logoutCustomChat()">Logout from Session-->
+                    <!--</a>-->
+                    <!--</li>-->
                     <li>
                         <a href="#"
                            target="_self"
                            class="logoutHarvardChat"
-                           ng-click="logoutHarvardChat()">Logout from Harvard
+                           ng-click="logoutHarvardChat()">Logout
                         </a>
                     </li>
                 </ul>
