--- a/views/login1.ejs
+++ b/views/login1.ejs
@@ -119,7 +119,7 @@
 
         <!--Username field-->
         <div class="form-group">
-            <label for="customUsername">Custom Username</label>
+            <label for="customUsername">Custom Username:(can be changed later) </label>
             <input type="text"
                    class="form-control"
                    id="customUsername"
@@ -203,7 +203,8 @@
 
         <div class="pull-right">
             <a class="navbar-btn btn btn-warning btn-xs hidden-xs">Status: Development</a>
-            <a href="#myModal" role="button" class="navbar-btn btn btn-info btn-xs" data-toggle="modal">Shoot Me an Email</a>
+            <a href="#myModal" role="button" class="navbar-btn btn btn-info btn-xs" data-toggle="modal">Shoot Me an
+                Email</a>
         </div>
     </div>
 </div>
