--- a/public/partials/questionFeed.html
+++ b/public/partials/questionFeed.html
@@ -81,17 +81,19 @@
         </li>
     </ul>
 
-    <pagination total-items="totalNo"
-                items-per-page="itemsPerPage"
-                ng-model="pageNo"
-                max-size="5"
-                class="pagination-sm"
-                boundary-links="true"
-                previous-text="&lsaquo;"
-                next-text="&rsaquo;"
-                first-text="&laquo;"
-                last-text="&raquo;"
-                rotate="false"
-                ng-change="navigate()">
-    </pagination>
+    <div class="text-center">
+        <pagination total-items="totalNo"
+                    items-per-page="itemsPerPage"
+                    ng-model="pageNo"
+                    max-size="5"
+                    class="pagination-sm"
+                    boundary-links="true"
+                    previous-text="&lsaquo;"
+                    next-text="&rsaquo;"
+                    first-text="&laquo;"
+                    last-text="&raquo;"
+                    rotate="false"
+                    ng-change="navigate()">
+        </pagination>
+    </div>
 </div>
