temp host shift changes

--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -41,7 +41,7 @@
           href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.2.0/css/font-awesome.min.css">
 
     <!--angular loading bar css-->
-    <link rel="stylesheet" href="/bower_components/angular-loading-bar/build/loading-bar.min.css"/>
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/angular-loading-bar/0.6.0/loading-bar.min.css"/>
 
     <!--normalize.css-->
     <link rel="stylesheet" href="/bower_components/normalize.css/normalize.css"/>
@@ -124,7 +124,8 @@
         src="/public/css/bootstrap/js/bootstrap.min.js"></script>
 
 <!--angular loading bar js-->
-<script type="text/javascript" src="/bower_components/angular-loading-bar/build/loading-bar.min.js"></script>
+<script type="text/javascript"
+        src="//cdnjs.cloudflare.com/ajax/libs/angular-loading-bar/0.6.0/loading-bar.min.js"></script>
 
 <!-- loads respond.js: enables responsive web designs in browsers that don't support CSS3 Media Queries - in particular, Internet Explorer 8 and under. -->
 <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script>
